--- a/po/fr.po
+++ b/po/fr.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: gimp-print 5.0.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-05-12 20:55-0400\n"
-"PO-Revision-Date: 2006-05-27 15:06-0400\n"
+"PO-Revision-Date: 2006-05-28 10:05-0400\n"
 "Last-Translator: regis rampnoux <regisr@pobox.com>\n"
 "Language-Team: GNOME French Team <gnomefr@traduc.org>\n"
 "MIME-Version: 1.0\n"
@@ -7040,7 +7040,7 @@ msgstr "Gutenprint"
 
 #: src/cups/genppd.c:890
 msgid "English"
-msgstr "English"
+msgstr "French"
 
 #: src/cups/genppd.c:892
 msgid "ISOLatin1"
