--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Welcome to Gutenprint 5.0.0-rc3!  Please read these release notes
+Welcome to Gutenprint 5.0.0!  Please read these release notes
 carefully.
 
 Gutenprint, formerly named Gimp-Print, is a suite of printer drivers
@@ -19,24 +19,21 @@ important) piece of the package.  Furthermore, the name Gutenprint
 recognizes Johannes Gutenberg, the inventor of the movable type
 printing press.  Finally, the word "guten" means "good" in German.
 
-Gutenprint 5.0.0-rc3 is the third release candidate of Gutenprint 5.0,
-and incorporates extensive feedback from the first release candidate.
-It is based on the Gimp-Print 4.3 series that has been in development
-for over three years, and includes many improvements over the very
-popular 4.2 series.  This release is believed to be quite stable, but
-further testing is required before final release.  We believe this
-release to be stable enough for day to day use, and encourage people
-to test it and report their results.
+Gutenprint 5.0.0 is the first stable release of Gutenprint 5.0, and
+incorporates extensive feedback from the first release candidate.  It
+is based on the Gimp-Print 4.3 series that has been in development for
+over three years, and includes many improvements over the very popular
+4.2 series.  This release is believed to be quite stable, but further
+testing is required before final release.  We believe this release to
+be stable enough for day to day use, and encourage people to test it
+and report their results.
 
 Gutenprint currently supports over 700 printer models.
 
 These release notes contain the following sections:
 
 I)    General Requirements
-II)   Changes from Previous Releases
-	A) Changes from 5.0.0-rc2 to 5.0.0-rc3
-	B) Changes from 5.0.0-rc1 to 5.0.0-rc2
-III)  Overall changes from 4.2 to 5.0.
+II)   Overall changes from 4.2 to 5.0.
 	A) General user-visible changes
 	B) New Functionality
 	C) Changes to the Print plugin for the GIMP
@@ -45,13 +42,13 @@ III)  Overall changes from 4.2 to 5.0.
 	F) Changes to the Foomatic data generator
 	G) Quality improvements
 	H) Architectural Changes
-IV)   Exceptions and Workarounds
+III)  Exceptions and Workarounds
 	A) General Issues
 	B) Build/Installation Issues
-V)    Supported Printers
+IV)   Supported Printers
 	A) List of Supported Printers
 	B) Printer-specific notes
-VI)   List of supported options
+V)    List of supported options
 	A) Basic Printer Options
 	B) Advanced Printer Options
 	C) Specialized Printer Options
@@ -136,319 +133,7 @@ for building and installing Gutenprint.
 
 ================================================================
 
-II) MAJOR CHANGES FROM PREVIOUS RELEASES
-
-A) MAJOR CHANGES BETWEEN GUTENPRINT 5.0.0 RELEASE CANDIDATE 2 AND
-   GUTENPRINT 5.0.0 RELEASE CANDIDATE 3:
-
-  1) The package now offers explicit support for many more printers.
-     All printers supported by Gutenprint are now listed explicitly
-     rather than via the compatibility list.  As a result, CUPS PPD
-     files and Foomatic are now generated for each supported printer.
-
-  2) CUPS and Foomatic/IJS now produce correctly dimensioned and
-     positioned output.  Previous pre-releases of Gutenprint 5.0
-     produced incorrectly dimensioned and/or positioned (offset from
-     the correct position) output in certain cases.  This happened in
-     the following circumstances:
-
-     a) When a printer capable of optional full-bleed or borderless
-	operation was used in full-bleed/borderless mode, the output
-	was stretched to fit the expanded dimensions.  The result was
-	that lines of specified lengths were printed slightly longer
-	than desired, and since the vertical and horizontal stretching
-	was normally not identical, the output was distorted slightly.
-
-     b) When printing directly to a CD, the output was shrunk
-	horizontally and/or positioned incorrectly by a small amount
-	(typically a few mm).
-
-     c) Depending upon the application doing the printing and the
-	printer selected, the output was shifted down and to the right
-	by several mm.
-
-     The PPD files and driver have been modified to specify zero
-     borders in all cases when a printer with borderless capability is
-     used.  If normal (non-borderless) mode is selected, the border is
-     simply not printed, leaving correct dimensions for everything
-     within the imageable area.  However, as a result of this, the
-     driver no longer prints true full bleed (overprinting the edge of
-     the page).  The margins are set to zero, and typically there will
-     be very narrow unprinted margins (less than 1 mm) on one or more
-     sides.
-
-     Printing to CD's works correctly whether or not full bleed mode
-     is selected.
-
-     This change has no effect in the GIMP plugin and in other
-     applications which directly use Gutenprint, as there was never
-     any problem in those contexts.
-
-  3) The IJS driver now correctly ejects the last page of a job.
-     Previously it did not always eject the last page with certain
-     Epson printers.
-
-  4) The Epson Stylus Photo R800, R1800, R2400, and related printers
-     should now print at full speed in all cases.  Previously these
-     printers were extremely slow (about 10 times slower than normal)
-     in many cases.
-
-     Related to this, the list of resolutions offered for these
-     printers are slightly different from before.  Resolutions above
-     2880x1440 DPI are no longer offered; instead, resolutions of
-     2880x1440 high quality and 2880x1440 highest quality are offered.
-     These resolutions use extra passes of the print head to reduce
-     banding.  In addition, these resolutions are actually 1440 DPI
-     horizontally and 2880 DPI vertically.
-
-  5) The HP DeskJet 690 and other supported PCL printers capable of
-     6-color photo printing (such as the Apollo P-2100 and Apple Color
-     StyleWriter 4500) no longer result in the driver crashing if
-     black and white output mode was selected.  Also, Canon printers
-     capable of 6 or 7 color photo printing no longer result in a
-     crash if black and white output mode is selected.
-
-  6) Canon and Lexmark inkjet printers now print if color output mode
-     is selected with a black and white cartridge installed.
-     Previously this was not possible in the GIMP plugin; the CUPS and
-     Foomatic drivers permitted this to be set, but gave a runtime
-     error when a job with these settings was printed.  These printers
-     now accept the job and simply print it in black and white.
-
-  7) The cleaning and nozzle check functions of escputil now work
-     properly on most printers, and escputil no longer crashes if you
-     type ctrl-D to a command prompt.  In addition, the status printed
-     via the status command is now much more readable.
-
-  8) The color quality for the Epson R300, R800, R2400, and related
-     printers has been improved.
-
-  9) Raw output now works correctly on the Epson R800 and R1800.
-
-  10) The Canon driver now handles color and grayscale, and also photo
-     ink cartridges (previously it sometimes handled these incorrectly
-     or even crashed).  However, many of these printers still do not
-     print correctly with a photo cartridge installed (the width of
-     the printout is incorrect).
-
-  11) The GIMP plugin now displays the thumbnail image correctly in CMY
-     mode (previously it displayed incorrect colors).
-
-  12) Experimental support for the Japan-market Epson printers PM-A900,
-     PM-D800, PM-G730, and PX-V630, and preliminary support for the
-     PM-A650, PM-A750, and PM-A890.
-
-  13) The definition of the Epson Stylus CX3500, CX3600, CX3650,
-     CX4100, CX4200, CX4500, CX4600, CX4700, CX4800, CX5700, CX5800,
-     CX7700, CX7800, DX4200, DX4250, DX4800, and PX-A650 have been
-     corrected.  The DX4800 now works correctly; the color output for
-     all of these printers has been corrected.  All of these printers
-     also now print at full speed; they previously printed extremely
-     slowly in many cases.
-
-     The list of resolutions is also slightly different from before;
-     the 2880x1440 DPI resolution is no longer offered; instead,
-     resolutions of 1440x1440 high quality and 1440x1440 highest
-     quality are offered.  These resolutions use extra passes of the
-     print head to reduce banding.
-
-  14) A new option for generating simplified PPD files for CUPS has
-     been added.  The --enable-simplified-cups-ppds=yes option to
-     configure allows generating PPD files with only basic options
-     (including only common paper sizes) in addition to the normal,
-     full-featured PPD files; --enable-simplified-cups-ppds=only
-     generates only the simplified PPD files.  The -a and -s options
-     to cups-genppd.5.0 may be used manually to do the same thing.
-     This is discussed in the README file.
-
-  15) cups-genppdupdate.5.0 has significant enhancements:
-
-     * A new option, -N, causes cups-genppdupdate.5.0 to not merge
-       options from the old PPD file into the new file.  This can be
-       used to reset a CUPS+Gutenprint PPD file to its original state.
-
-     * A new option, -o, causes cups-genppdupdate.5.0 to output the
-       PPD files into a different directory.
-
-     * It is now possible to specify individual PPD files or printer
-       queue names on the command line to only update/reset specific
-       PPD files.
-
-     * The program no longer tries and fails to update Foomatic-based
-       PPD files.
-
-  16) The Foomatic data generator now generates simplified data (using
-     a driver name of "gutenprint-ijs-simplified.5.0") in addition to
-     the standard, full-featured data (gutenprint-ijs.5.0).
-
-  17) The input slots (media sources) have been corrected for the
-     Epson Stylus Photo R1800, R2400, and RX700.
-
-  18) New options to escputil allow specifying the number of line pairs
-     and number of patterns for head alignment explicitly, if needed.
-     In addition, the number of line pairs for the Epson Stylus Photo
-     700 has been changed from 7 to 15.
-
-  19) A few build problems have been fixed.
-
-  20) A Hungarian translation has been added.
-
-  21) The configure script now prints out a summary of configuration
-     options selected at the end of the script run.  For developers,
-     "autogen.sh --help" now prints out the configure help if the
-     configure script exists.
-
-  22) The Lexmark driver should now print correctly (this is only
-     partially tested).
-
-  23) Chilean Office, Chilean Double Letter, and Chilean Double Office
-     paper sizes have been added.
-
-  24) An error in the Czech, Danish, and Portuguese translations that
-     caused the GIMP plugin to emit a warning at startup has been
-     fixed.
-
-  25) The package is now built with libtool 1.5.22.
-
-The following bugs have been fixed since Gutenprint 5.0.0-rc3:
-
-1318890 Borderless print scaled wrongly
-1379402 BJC-4400: SEGFAULT (photo-ink/color mode)
-1393755 [Feature Request] Chilean paper sizes.
-1417600 escputil clean and nozzle check don't work on new printers
-1417603 escputil seg faults if you type ctrl-D to prompt
-1421674 Gutenprint 5.0.0rc2 crashes in Mac OS X 10.2.8
-1422101 Raw output does not work on R800 and related printers
-1425951 Bug#351731: Fails in alignment with stylos photo 700
-1447115 Epson driver broken in RC2 (DX4850)
-1458059 Lexmark Z52 not working
-1458911 Very poor performance with Epson R2400, R800, and R1800
-1466678 Epson Stylus Photo R300 fails to eject last page
-1467956 Print to CD prints incorrectly with CUPS driver
-1478819 bad translation format
-1487715 HP DeskJet 690 and related crash in grayscale w/photo ink
-1487717 Canon/Lexmark printers fail in color mode w/BW inks
-1487720 Canon printers crash in grayscale with photo ink 
-
-----------------
-
-B) MAJOR CHANGES BETWEEN GUTENPRINT 5.0.0 RELEASE CANDIDATE 1 AND
-   GUTENPRINT 5.0.0 RELEASE CANDIDATE 2:
-
-  1) The Postscript driver now produces more accurate colors.
-     Previous releases produced overly pale colors with the default
-     settings.
-
-  2) The Postscript driver now accepts red, green, and blue rather
-     than cyan, magenta, and yellow options in the GIMP plugin.
-
-  3) The Postscript driver now prints correctly regardless of image
-     size.  Previously it corrupted the output if the width of the
-     image was not a multiple of 4 pixels.
-
-  4) The driver package now permits specifying all options regardless
-     of the setting of the Image Type and Quality options (previously
-     it disabled a lot of settings if Quality and/or Image Type were
-     not set to Manual Control).  The behavior is now that Quality and
-     Image Type provide defaults that may be overridden by the user.
-     For example, if the resolution is provided explicitly, it will
-     override the resolution implied by the Quality setting.
-
-     Related to this, the CUPS driver now handles Quality properly.
-
-  5) A description of all options supported by Gutenprint has been
-     added.
-
-  6) cups-genppdupdate now preserves the ownership and permissions of
-     the PPD files being updated, rather than forcibly setting the
-     owner to root and the permissions to root read/write and everyone
-     else read-only access.
-
-  7) The GIMP plugin now loads the printrc file correctly in all
-     locales.  Previously it did not load floating point numbers
-     correctly in locales that don't use the `.' character as the
-     decimal point.
-
-  8) The GIMP plugin now offers improved choices in the color
-     adjustment window for viewing individual channels of the output.
-     It now offers red/green/blue, cyan/magenta/yellow, or
-     cyan/magenta/yellow/black as appropriate.
-
-  9) The GIMP plugin is now considerably more responsive; many
-     unnecessary screen redraws have been removed.  In addition, a
-     display glitch wherein horizontal lines were sometimes drawn
-     through certain widgets has been fixed.
-
-  10) The Epson printer utility escputil now reports ink information
-     more consistently across a wider range of printers.  In
-     particular, the extended ink information command (escputil -e)
-     should now work correctly on all models from the Stylus Color 740
-     through the present.
-
-  11) Preliminary support for the Epson Stylus C68, C87, C88, CX3700,
-     CX3800, CX3805, CX3810, CX4100, CX4200, CX4500, CX4700, CX4800,
-     CX5700, CX5800, CX7700, CX7800, D68, D88, DX3800, DX3850, DX4200,
-     DX4250, DX4800, PX-A650, and Stylus Photo R220, R320, and R340.
-     These printers are expected to be fully functional (for the
-     multi-function devices, this package supports only the printer
-     function -- it does not support scanning or fax).
-
-  12) Preliminary support for the Epson Stylus Photo R2400/PX-5500.
-     This printer has been partially tuned, but there will likely be
-     further changes to this driver.
-
-  13) Support for the Epson PictureMate/E-100.
-
-  14) Preliminary support for the Epson Stylus Photo RX700/PM-A900.
-     This printer has been partially tuned, but there will likely be
-     further changes to this driver.
-
-  15) Initial support for Canon S200, SELPHY CP-510 and SELPHY CP-710;
-     Sony UP-DR150, and Olympus P-11 has been added.
-
-  16) The Canon PIXMA iP4000 printers can now print to cds.  Duplex
-     printing with binding on the short side is now supported, too.
-
-  17) The Epson Stylus Photo R200 and related printers have been
-     retuned to give improved detail in the shadows, reduced ink
-     usage, more accurate grayscale, and more accurate colors.
-     Affected printers are presently the R200, R210, R220, R300, R310,
-     R320, R340, RX400, RX420, RX425, RX430, RX500, RX510, RX600,
-     RX620, RX630, PM-D750, PM-D770, PM-G700, and PM-G720.
-
-     Any profiles generated against these printers will have to be
-     re-created.
-
-  18) The Epson Stylus Photo R800 and R1800 have been retuned to give
-     improved detail in the shadows, reduced ink usage, more accurate
-     grayscale, and more accurate colors.
-
-     Any profiles generated against these printers will have to be
-     re-created.
-
-  19) New "transposed" resolutions (1440x720 and 2880x1440) have been
-     added for some Epson printers.  These resolutions are actually
-     equivalent to 720x1440 and 1440x2880 DPI respectively.  In some
-     cases these may yield better results (specifically, less
-     microbanding) than the normal 1440x720 and 2880x1440 DPI
-     resolutions.
-
-  20) Quadtone printing now works correctly regardless of whether
-     color or grayscale mode is selected.
-
-The following bugs have been fixed in Gutenprint 5.0.0-rc2:
-
-1389788 Poor discoverability of advanced options
-1389787 CUPS driver does not set Quality correctly
-1389785 cups-genppdupdate sets PPD file owners incorrectly
-1388615 escputil with Epson CX3700
-1304710 Postscript driver corrupts output if width not multiple of 4
-1251978 PPD for Stylus Color 600
-
-
-================================================================
-
-III) OVERALL CHANGES BETWEEN GIMP-PRINT 4.2 AND GUTENPRINT 5.0:
+II) OVERALL CHANGES BETWEEN GIMP-PRINT 4.2 AND GUTENPRINT 5.0:
 
 A) GENERAL USER-VISIBLE CHANGES:
 
@@ -1129,7 +814,7 @@ H) ARCHITECTURAL CHANGES:
 
 ================================================================
 
-IV) EXCEPTIONS AND WORKAROUNDS
+III) EXCEPTIONS AND WORKAROUNDS
 
 A) GENERAL ISSUES
 
@@ -1185,11 +870,12 @@ B) BUILD/INSTALLATION ISSUES
         default location of Gutenprint installation is in /usr/local,
         but system vendors typically install Gutenprint in /usr.
 
-     iii) Gutenprint is built dynamically only (--disable-static).  This
-        is not a default, and requires the explicit --disable-static
-        on the Gutenprint "configure" command line.  Therefore, if you
-        build Gutenprint normally you should not be vulnerable to this
-        problem.
+     iii) Gutenprint is built dynamically only (--disable-static or
+        --disable-static-genppd).  This is not a default, and requires
+        the explicit --disable-static or --disable-static-genppd on
+	the Gutenprint "configure" command line.  Therefore, if you
+	build Gutenprint normally you should not be vulnerable to this
+	problem.
 
      Note that in general if you install CUPS into a non-standard
      location, and install Gutenprint into the same location, this
@@ -1199,21 +885,23 @@ B) BUILD/INSTALLATION ISSUES
      anywhere but /usr.
 
      In this case, the run path embedded in the genppd executable
-     points to the version of Gutenprint installed in /usr/lib. This
+     points to the version of Gutenprint installed in /usr/lib.  This
      run path overrides any attempt by libtool to look in the build
-     directory. The result is that cups-genppd and rastertogutenprint
-     are run against the older version of Gutenprint. If the new
-     version contains additional features (more printers, etc.) they
-     will not be available.
+     directory.  The result is that cups-genppd and rastertogutenprint
+     are run against the older version of Gutenprint.  If the new
+     version contains additional features (more printers, changes to
+     printer options, etc.) they will not be available.
 
-     This bug is difficult to detect in a normal build.  It does not
-     cause an error to happen during build; the only failure is that
-     some PPD files may not be built or may be built with missing
-     options.  Due to the PPD version checking introduced in this
-     release, the behavior might manifest itself as a runtime error.
-     It is also possible that there will be no error at all other than
-     the older version of Gutenprint being used, with the result that
-     new features and bug fixes are not available.
+     This bug is difficult to detect in a normal build.  It normally
+     does not cause an error to happen during build unless there is an
+     API change from the version installed and the version being
+     built; the only failure is frequently that some PPD files may not
+     be built or may be built with missing options.  Due to the PPD
+     version checking introduced in this release, the behavior might
+     manifest itself as a runtime error.  It is also possible that
+     there will be no error at all other than the older version of
+     Gutenprint being used, with the result that new features and bug
+     fixes are not available.
 
      If you wish to use only shared libraries, do not wish to build
      static libraries at all, and are vulnerable to this issue
@@ -1542,7 +1230,7 @@ B) BUILD/INSTALLATION ISSUES
 
 ================================================================
 
-V) SUPPORTED PRINTERS:
+IV) SUPPORTED PRINTERS:
 
 A) LIST OF SUPPORTED PRINTERS
 
@@ -2415,7 +2103,7 @@ B) PRINTER-SPECIFIC NOTES:
 
 ================================================================
 
-VI) LIST OF SUPPORTED OPTIONS
+V) LIST OF SUPPORTED OPTIONS
 
 This section details the options available in this release of
 Gutenprint 5.0.  More advanced options are subject to change between
